# cinewiz

./: MANUAL.md  README.md  cinewiz.py  pyproject.toml  requirements.txt  setup.py
examples/: README.MD  __ex__postcard__.py  postcard.py
genai/: README.MD  __init__.py
gimp-plugins/: README.MD  cinewiz-gimp-plugin.py
manual/: README.MD
