[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cinewiz"
version = "0.1.0"
description = "🎬 Cinewiz — GenAI video toolkit for compositing, masking, and cinematic FX automation."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }

authors = [
  { name = "ssmool", email = "contact@ssmool.dev" }
]

keywords = [
  "genai", "video", "ai", "masking", "fx", "cinema",
  "computer-vision", "deep-learning", "toolkit"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Topic :: Multimedia :: Video",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
  "opencv-python",
  "numpy",
  "torch",
  "transformers",
  "pillow",
  "tqdm"
]

[project.optional-dependencies]
dev = [
  "black",
  "flake8",
  "pytest",
  "setuptools",
  "wheel",
  "twine"
]

cuda = [
  "torchvision",
  "torchaudio",
  "cupy-cuda12x"
]

docs = [
  "mkdocs",
  "mkdocs-material",
  "pdoc"
]

examples = [
  "matplotlib",
  "moviepy",
  "imageio",
  "notebook"
]

[project.urls]
Homepage = "https://github.com/ssmool/cinewiz"
Repository = "https://github.com/ssmool/cinewiz"
Issues = "https://github.com/ssmool/cinewiz/issues"
Documentation = "https://github.com/ssmool/cinewiz/wiki"
Examples = "https://github.com/ssmool/cinewiz/tree/main/examples"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["cinewiz", "cinewiz.*"]

[tool.setuptools.package-data]
"cinewiz" = ["../examples/**/*"]

[tool.cinewiz]
module_dir = "cinewiz/genai"
example_dir = "examples"

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
