[metadata]
name = CINEWIZ
version = 2.0.1
author = #ASYTRICK
author_email = eusmool@gmail.com
description = **Cinewiz** is an open-source Python package designed to streamline the development of **multimodal applications** powered by **LLMs**, **RAG (Retrieval-Augmented Generation)**, and **web crawling**. It’s built for workflows that require dynamic content generation and automation in creative environments.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ssmool/cinewiz
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Development Status :: 4 - Beta
[options]
packages = find:
python_requires = >=3.7
install_requires=
	rembg
	Pillow
	qrcode
	selenium
	webdriver_manager
	transformers
	opencv-python
	numpy
	scikit-image
